# marginalia

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
ai-docs/: svelte-migration-remaining.md
docs/: agent.js  app.js  chat-ui.js  chat.css  db.js  index.html  manifest.json  marginalia.js  style.css  sw.js  theme.css  tools.js  viewer.html
docs/assets/: app-6ofGhLRk.css  app-8WOWZhuJ.js  app-AlM-704N.js  app-B0jZQH3B.css  app-B4UHJ0NK.js  app-B6VjGED2.css  app-B8iP8xpO.js  app-BEV7JKVh.js  app-BEW0GDAk.js  app-BGKfpKee.js  app-BL-5E-nn.css  app-BLYGKa63.js  app-BLjKrvKA.js  app-BM3bJi7D.js  app-BMLrDmOu.js  app-BMPwT4H1.css  app-BOJ0_EG4.css  app-BSe_V7mx.js  app-BUdOCpZI.css  app-BZvpd8CA.js  app-BdsqZR6N.js  app-BgXjLHEP.js  app-BghyLney.css  app-BgzJ7BVf.css  app-BiYzBJTL.js  app-BiswgHBv.js  app-Bj3hwvZY.css  app-BlMRwccc.js  app-BnLAnA0r.js  app-BnjAyxs-.js  app-BoWSs7Gy.js  app-BpiVhmi-.js  app-BskwRnj8.js  app-BuWOBaPt.js  app-BwLPMJXS.css  app-C-iOrIeb.js  app-C1v35TnU.js  app-C4EUlaoq.js  app-C5FGWx2B.js  app-C5mynfWX.js  (+396 more)
docs/pdfjs/web/: viewer.css  viewer.html
marginalia/: __init__.py  env.py  logging.py  registry.py
marginalia/chat/: api.py  chat.py
marginalia/server/: api.py  server.py
marginalia/server/static/: app.js  style.css
marginalia/server/templates/: index.html
scripts/: server.py
svelte-app/: index.html  package-lock.json  package.json  viewer.html  vite.config.ts
svelte-app/public/: manifest.json  sw.js
svelte-app/src/: App.svelte  app.css
svelte-app/src/lib/: types.ts
(+47 files in other folders)
