[project]
name = "marginalia"
version = "0.1.0"
description = "PDF reader with AI chat overlay"
readme = "README.md"
authors = [
    { name = "Alexey Karnachev", email = "alekseykarnachev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "loguru>=0.7.3",
    "openai>=1.50.0",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "typer>=0.15.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.397",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["type-abstract"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
